# miniarg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
miniarg_derive/: Cargo.toml  README.md
miniarg_derive/src/: lib.rs
src/: lib.rs  parse.rs  split_args.rs  str_index.rs
tests/: derive.rs  integration.rs  no_alloc.rs
