[package]
name = "miniarg"
version = "0.1.0"
authors = ["Niklas Sombert <niklas@ytvwld.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniarg_derive = { path = "miniarg_derive", optional = true }

[features]
default = ["std"]
std = []
alloc = []
derive = ["miniarg_derive"]
