[package]
name = "miniarg"
version = "0.1.0"
authors = ["Niklas Sombert <niklas@ytvwld.de>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniarg_derive = { path = "miniarg_derive", optional = true }
cfg-if = "1.0"

[features]
default = ["std"]
std = []
alloc = []
derive = ["miniarg_derive"]
