[package]
name = "miniarg"
version = "0.2.0"
authors = ["Niklas Sombert <niklas@ytvwld.de>"]
description = "A minimal argument parser, with support for no-std and no-alloc"
categories = ["command-line-interface", "no-std"]
keywords = ["argument-parser", "command-line"]
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/YtvwlD/miniarg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniarg_derive = { version = "0.2", optional = true }
cfg-if = "1.0"

[dev-dependencies]
version-sync = "0.9"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
derive = ["miniarg_derive"]

[patch.crates-io]
miniarg_derive = { path = "miniarg_derive/" }
